[gd_scene load_steps=15 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/TileMaps/Walls.tres" type="TileSet" id=3]
[ext_resource path="res://Assets/TileMaps/Objects.tres" type="TileSet" id=4]
[ext_resource path="res://Assets/TileMaps/Floor.tres" type="TileSet" id=5]
[ext_resource path="res://Assets/TileMaps/FloorDetail.tres" type="TileSet" id=6]
[ext_resource path="res://Assets/TileMaps/RoomDetail.tres" type="TileSet" id=7]
[ext_resource path="res://Chat.gd" type="Script" id=8]
[ext_resource path="res://UI/chatIcon.png" type="Texture" id=9]
[ext_resource path="res://UI/ColorPicker.gd" type="Script" id=10]
[ext_resource path="res://UI/Star.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.341176 )

[sub_resource type="Animation" id=2]
resource_name = "ChatWindow"
tracks/0/type = "value"
tracks/0/path = NodePath("ChatOpen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 640 ), Vector2( 380, 640 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChatWindow:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 740 ), Vector2( 20, 25 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "newMail"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ChatOpen/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0.47451 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Room" type="Node2D" parent="."]

[node name="Floor" type="TileMap" parent="Room"]
mode = 1
tile_set = ExtResource( 5 )
cell_size = Vector2( 256, 128 )
format = 1
tile_data = PoolIntArray( -720902, 5, 0, -720901, 5, 0, -720900, 5, 0, -720899, 5, 0, -720898, 5, 0, -720897, 5, 0, -786432, 5, 0, -786431, 5, 0, -786430, 5, 0, -786429, 5, 0, -786428, 5, 0, -786427, 5, 0, -786426, 5, 0, -786425, 5, 0, -786424, 5, 0, -786423, 5, 0, -786422, 5, 0, -786421, 5, 0, -786420, 5, 0, -786419, 5, 0, -786418, 5, 0, -786417, 5, 0, -786416, 5, 0, -786415, 5, 0, -786414, 5, 0, -786413, 5, 0, -786412, 5, 0, -786411, 5, 0, -786410, 5, 0, -786409, 5, 0, -786408, 5, 0, -655366, 5, 0, -655365, 5, 0, -655364, 5, 0, -655363, 5, 0, -655362, 5, 0, -655361, 5, 0, -720896, 5, 0, -720895, 5, 0, -720894, 5, 0, -720893, 5, 0, -720892, 5, 0, -720891, 5, 0, -720890, 5, 0, -720889, 5, 0, -720888, 5, 0, -720887, 5, 0, -720886, 5, 0, -720885, 5, 0, -720884, 5, 0, -720883, 5, 0, -720882, 5, 0, -720881, 5, 0, -720880, 5, 0, -720879, 5, 0, -720878, 5, 0, -720877, 5, 0, -720876, 5, 0, -720875, 5, 0, -720874, 5, 0, -720873, 5, 0, -720872, 5, 0, -589830, 5, 0, -589829, 5, 0, -589828, 5, 0, -589827, 5, 0, -589826, 5, 0, -589825, 5, 0, -655360, 5, 0, -655359, 5, 0, -655358, 5, 0, -655357, 5, 0, -655356, 5, 0, -655355, 5, 0, -655354, 5, 0, -655353, 5, 0, -655352, 5, 0, -655351, 5, 0, -655350, 5, 0, -655349, 5, 0, -655348, 5, 0, -655347, 5, 0, -655346, 5, 0, -655345, 5, 0, -655344, 5, 0, -655343, 5, 0, -655342, 5, 0, -655341, 5, 0, -655340, 5, 0, -655339, 5, 0, -655338, 5, 0, -655337, 5, 0, -655336, 5, 0, -524294, 5, 0, -524293, 5, 0, -524292, 5, 0, -524291, 5, 0, -524290, 5, 0, -524289, 5, 0, -589824, 5, 0, -589823, 5, 0, -589822, 5, 0, -589821, 5, 0, -589820, 5, 0, -589819, 5, 0, -589818, 5, 0, -589817, 5, 0, -589816, 5, 0, -589815, 5, 0, -589814, 5, 0, -589813, 5, 0, -589812, 5, 0, -589811, 5, 0, -589810, 5, 0, -589809, 5, 0, -589808, 5, 0, -589807, 5, 0, -589806, 5, 0, -589805, 5, 0, -589804, 5, 0, -589803, 5, 0, -589802, 5, 0, -589801, 5, 0, -589800, 5, 0, -458758, 5, 0, -458757, 5, 0, -458756, 5, 0, -458755, 5, 0, -458754, 5, 0, -458753, 5, 0, -524288, 5, 0, -524287, 5, 0, -524286, 5, 0, -524285, 5, 0, -524284, 5, 0, -524283, 5, 0, -524282, 5, 0, -524281, 5, 0, -524280, 5, 0, -524279, 5, 0, -524278, 5, 0, -524277, 5, 0, -524276, 5, 0, -524275, 5, 0, -524274, 5, 0, -524273, 5, 0, -524272, 5, 0, -524271, 5, 0, -524270, 5, 0, -524269, 5, 0, -524268, 5, 0, -524267, 5, 0, -524266, 5, 0, -524265, 5, 0, -524264, 5, 0, -393222, 5, 0, -393221, 5, 0, -393220, 5, 0, -393219, 5, 0, -393218, 5, 0, -393217, 5, 0, -458752, 5, 0, -458751, 5, 0, -458750, 5, 0, -458749, 5, 0, -458748, 5, 0, -458747, 5, 0, -458746, 5, 0, -458745, 5, 0, -458744, 5, 0, -458743, 5, 0, -458742, 5, 0, -458741, 5, 0, -458740, 5, 0, -458739, 5, 0, -458738, 5, 0, -458737, 5, 0, -458736, 5, 0, -458735, 5, 0, -458734, 5, 0, -458733, 5, 0, -458732, 5, 0, -458731, 5, 0, -458730, 5, 0, -458729, 5, 0, -458728, 5, 0, -327686, 5, 0, -327685, 5, 0, -327684, 5, 0, -327683, 5, 0, -327682, 5, 0, -327681, 5, 0, -393216, 5, 0, -393215, 5, 0, -393214, 5, 0, -393213, 5, 0, -393212, 5, 0, -393211, 5, 0, -393210, 5, 0, -393209, 5, 0, -393208, 5, 0, -393207, 5, 0, -393206, 5, 0, -393205, 5, 0, -393204, 5, 0, -393203, 5, 0, -393202, 5, 0, -393201, 5, 0, -393200, 5, 0, -393199, 5, 0, -393198, 5, 0, -393197, 5, 0, -393196, 5, 0, -393195, 5, 0, -393194, 5, 0, -393193, 5, 0, -393192, 5, 0, -262150, 5, 0, -262149, 5, 0, -262148, 5, 0, -262147, 5, 0, -262146, 5, 0, -262145, 5, 0, -327680, 5, 0, -327679, 5, 0, -327678, 5, 0, -327677, 5, 0, -327676, 5, 0, -327675, 5, 0, -327674, 5, 0, -327673, 5, 0, -327672, 5, 0, -327671, 5, 0, -327670, 5, 0, -327669, 5, 0, -327668, 5, 0, -327667, 5, 0, -327666, 5, 0, -327665, 5, 0, -327664, 5, 0, -327663, 5, 0, -327662, 5, 0, -327661, 5, 0, -327660, 5, 0, -327659, 5, 0, -327658, 5, 0, -327657, 5, 0, -327656, 5, 0, -196614, 5, 0, -196613, 5, 0, -196612, 5, 0, -196611, 5, 0, -196610, 5, 0, -196609, 5, 0, -262144, 5, 0, -262143, 5, 0, -262142, 5, 0, -262141, 5, 0, -262140, 5, 0, -262139, 5, 0, -262138, 5, 0, -262137, 5, 0, -262136, 5, 0, -262135, 5, 0, -262134, 5, 0, -262133, 5, 0, -262132, 5, 0, -262131, 5, 0, -262130, 5, 0, -262129, 5, 0, -262128, 5, 0, -262127, 5, 0, -262126, 5, 0, -262125, 5, 0, -262124, 5, 0, -262123, 5, 0, -262122, 5, 0, -262121, 5, 0, -262120, 5, 0, -131078, 5, 0, -131077, 5, 0, -131076, 5, 0, -131075, 5, 0, -131074, 5, 0, -131073, 5, 0, -196608, 5, 0, -196607, 5, 0, -196606, 5, 0, -196605, 5, 0, -196604, 2, 0, -196603, 2, 0, -196602, 5, 0, -196601, 5, 0, -196600, 5, 0, -196599, 5, 0, -196598, 5, 0, -196597, 5, 0, -196596, 5, 0, -196595, 5, 0, -196594, 5, 0, -196593, 5, 0, -196592, 5, 0, -196591, 5, 0, -196590, 5, 0, -196589, 5, 0, -196588, 5, 0, -196587, 5, 0, -196586, 5, 0, -196585, 5, 0, -196584, 5, 0, -65542, 5, 0, -65541, 5, 0, -65540, 5, 0, -65539, 5, 0, -65538, 5, 0, -65537, 5, 0, -131072, 5, 0, -131071, 5, 0, -131070, 5, 0, -131069, 5, 0, -131068, 2, 0, -131067, 2, 0, -131066, 2, 0, -131065, 2, 0, -131064, 2, 0, -131063, 5, 0, -131062, 5, 0, -131061, 5, 0, -131060, 5, 0, -131059, 5, 0, -131058, 5, 0, -131057, 5, 0, -131056, 5, 0, -131055, 5, 0, -131054, 5, 0, -131053, 5, 0, -131052, 5, 0, -131051, 5, 0, -131050, 5, 0, -131049, 5, 0, -131048, 5, 0, -6, 5, 0, -5, 5, 0, -4, 5, 0, -3, 5, 0, -2, 5, 0, -1, 5, 0, -65536, 5, 0, -65535, 5, 0, -65534, 5, 0, -65533, 2, 0, -65532, 2, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 2, 0, -65527, 2, 0, -65526, 5, 0, -65525, 5, 0, -65524, 5, 0, -65523, 5, 0, -65522, 5, 0, -65521, 5, 0, -65520, 5, 0, -65519, 5, 0, -65518, 5, 0, -65517, 5, 0, -65516, 5, 0, -65515, 5, 0, -65514, 5, 0, -65513, 5, 0, -65512, 5, 0, 65530, 5, 0, 65531, 5, 0, 65532, 5, 0, 65533, 5, 0, 65534, 5, 0, 65535, 5, 0, 0, 5, 0, 1, 5, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 2, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 5, 0, 15, 5, 0, 16, 5, 0, 17, 5, 0, 18, 5, 0, 19, 5, 0, 20, 5, 0, 21, 5, 0, 22, 5, 0, 23, 5, 0, 24, 5, 0, 131066, 5, 0, 131067, 5, 0, 131068, 5, 0, 131069, 5, 0, 131070, 5, 0, 131071, 5, 0, 65536, 2, 0, 65537, 2, 0, 65538, 5, 0, 65539, 2, 0, 65540, 2, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 2, 0, 65547, 2, 0, 65548, 5, 0, 65549, 5, 0, 65550, 5, 0, 65551, 5, 0, 65552, 5, 0, 65553, 5, 0, 65554, 5, 0, 65555, 5, 0, 65556, 5, 0, 65557, 5, 0, 65558, 5, 0, 65559, 5, 0, 65560, 5, 0, 196602, 5, 0, 196603, 5, 0, 196604, 5, 0, 196605, 5, 0, 196606, 5, 0, 196607, 2, 0, 131072, 5, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 2, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 2, 0, 131084, 5, 0, 131085, 5, 0, 131086, 5, 0, 131087, 5, 0, 131088, 5, 0, 131089, 5, 0, 131090, 5, 0, 131091, 5, 0, 131092, 5, 0, 131093, 5, 0, 131094, 5, 0, 131095, 5, 0, 131096, 5, 0, 262138, 5, 0, 262139, 5, 0, 262140, 5, 0, 262141, 5, 0, 262142, 2, 0, 262143, 5, 0, 196608, 5, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 2, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 2, 0, 196619, 2, 0, 196620, 5, 0, 196621, 5, 0, 196622, 5, 0, 196623, 5, 0, 196624, 5, 0, 196625, 5, 0, 196626, 5, 0, 196627, 5, 0, 196628, 5, 0, 196629, 5, 0, 196630, 5, 0, 196631, 5, 0, 196632, 5, 0, 327674, 5, 0, 327675, 2, 0, 327676, 2, 0, 327677, 2, 0, 327678, 5, 0, 327679, 5, 0, 262144, 2, 0, 262145, 2, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 2, 0, 262150, 1, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 1, 0, 262156, 2, 0, 262157, 5, 0, 262158, 2, 0, 262159, 5, 0, 262160, 5, 0, 262161, 5, 0, 262162, 5, 0, 262163, 5, 0, 262164, 5, 0, 262165, 5, 0, 262166, 5, 0, 262167, 5, 0, 262168, 5, 0, 393210, 5, 0, 393211, 5, 0, 393212, 2, 0, 393213, 5, 0, 393214, 5, 0, 393215, 5, 0, 327680, 5, 0, 327681, 5, 0, 327682, 2, 0, 327683, 5, 0, 327684, 5, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 5, 0, 327694, 5, 0, 327695, 2, 0, 327696, 5, 0, 327697, 5, 0, 327698, 5, 0, 327699, 5, 0, 327700, 5, 0, 327701, 5, 0, 327702, 5, 0, 327703, 5, 0, 327704, 5, 0, 458746, 5, 0, 458747, 5, 0, 458748, 5, 0, 458749, 2, 0, 458750, 5, 0, 458751, 5, 0, 393216, 5, 0, 393217, 5, 0, 393218, 5, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 1, 0, 393225, 1, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 5, 0, 393231, 5, 0, 393232, 2, 0, 393233, 5, 0, 393234, 5, 0, 393235, 5, 0, 393236, 5, 0, 393237, 5, 0, 393238, 5, 0, 393239, 5, 0, 393240, 5, 0, 524282, 5, 0, 524283, 5, 0, 524284, 5, 0, 524285, 5, 0, 524286, 2, 0, 524287, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 1, 0, 458760, 1, 0, 458761, 2, 0, 458762, 2, 0, 458763, 5, 0, 458764, 5, 0, 458765, 5, 0, 458766, 5, 0, 458767, 5, 0, 458768, 2, 0, 458769, 5, 0, 458770, 5, 0, 458771, 5, 0, 458772, 5, 0, 458773, 5, 0, 458774, 5, 0, 458775, 5, 0, 458776, 5, 0, 589818, 5, 0, 589819, 5, 0, 589820, 5, 0, 589821, 5, 0, 589822, 5, 0, 589823, 2, 0, 524288, 2, 0, 524289, 5, 0, 524290, 5, 0, 524291, 5, 0, 524292, 5, 0, 524293, 2, 0, 524294, 2, 0, 524295, 1, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 5, 0, 524300, 5, 0, 524301, 5, 0, 524302, 5, 0, 524303, 2, 0, 524304, 2, 0, 524305, 5, 0, 524306, 5, 0, 524307, 5, 0, 524308, 5, 0, 524309, 5, 0, 524310, 5, 0, 524311, 5, 0, 524312, 5, 0, 655354, 5, 0, 655355, 5, 0, 655356, 5, 0, 655357, 5, 0, 655358, 5, 0, 655359, 5, 0, 589824, 5, 0, 589825, 5, 0, 589826, 5, 0, 589827, 5, 0, 589828, 5, 0, 589829, 2, 0, 589830, 2, 0, 589831, 1, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 5, 0, 589836, 5, 0, 589837, 5, 0, 589838, 5, 0, 589839, 2, 0, 589840, 5, 0, 589841, 5, 0, 589842, 5, 0, 589843, 5, 0, 589844, 5, 0, 589845, 5, 0, 589846, 5, 0, 589847, 5, 0, 589848, 5, 0, 720890, 5, 0, 720891, 5, 0, 720892, 5, 0, 720893, 5, 0, 720894, 5, 0, 720895, 5, 0, 655360, 5, 0, 655361, 5, 0, 655362, 5, 0, 655363, 5, 0, 655364, 5, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 5, 0, 655372, 5, 0, 655373, 5, 0, 655374, 2, 0, 655375, 2, 0, 655376, 5, 0, 655377, 5, 0, 655378, 5, 0, 655379, 5, 0, 655380, 5, 0, 655381, 5, 0, 655382, 5, 0, 655383, 5, 0, 655384, 5, 0, 786426, 5, 0, 786427, 5, 0, 786428, 5, 0, 786429, 5, 0, 786430, 5, 0, 786431, 5, 0, 720896, 5, 0, 720897, 5, 0, 720898, 5, 0, 720899, 5, 0, 720900, 5, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720919, 5, 0, 720920, 5, 0, 851962, 5, 0, 851963, 5, 0, 851964, 5, 0, 851965, 5, 0, 851966, 5, 0, 851967, 5, 0, 786432, 5, 0, 786433, 5, 0, 786434, 5, 0, 786435, 5, 0, 786436, 5, 0, 786437, 5, 0, 786438, 5, 0, 786439, 5, 0, 786440, 2, 0, 786441, 5, 0, 786442, 5, 0, 786443, 5, 0, 786444, 5, 0, 786445, 5, 0, 786446, 5, 0, 786447, 5, 0, 786448, 5, 0, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 5, 0, 786453, 5, 0, 786454, 5, 0, 786455, 5, 0, 786456, 5, 0, 917498, 5, 0, 917499, 5, 0, 917500, 5, 0, 917501, 5, 0, 917502, 5, 0, 917503, 5, 0, 851968, 5, 0, 851969, 5, 0, 851970, 5, 0, 851971, 5, 0, 851972, 5, 0, 851973, 5, 0, 851974, 5, 0, 851975, 5, 0, 851976, 5, 0, 851977, 5, 0, 851978, 5, 0, 851979, 5, 0, 851980, 5, 0, 851981, 5, 0, 851982, 5, 0, 851983, 5, 0, 851984, 5, 0, 851985, 5, 0, 851986, 5, 0, 851987, 5, 0, 851988, 5, 0, 851989, 5, 0, 851990, 5, 0, 851991, 5, 0, 851992, 5, 0, 983034, 5, 0, 983035, 5, 0, 983036, 5, 0, 983037, 5, 0, 983038, 5, 0, 983039, 5, 0, 917504, 5, 0, 917505, 5, 0, 917506, 5, 0, 917507, 5, 0, 917508, 5, 0, 917509, 5, 0, 917510, 5, 0, 917511, 5, 0, 917512, 5, 0, 917513, 5, 0, 917514, 5, 0, 917515, 5, 0, 917516, 5, 0, 917517, 5, 0, 917518, 5, 0, 917519, 5, 0, 917520, 5, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 5, 0, 917525, 5, 0, 917526, 5, 0, 917527, 5, 0, 917528, 5, 0, 1048570, 5, 0, 1048571, 5, 0, 1048572, 5, 0, 1048573, 5, 0, 1048574, 5, 0, 1048575, 5, 0, 983040, 5, 0, 983041, 5, 0, 983042, 5, 0, 983043, 5, 0, 983044, 5, 0, 983045, 5, 0, 983046, 5, 0, 983047, 5, 0, 983048, 5, 0, 983049, 5, 0, 983050, 5, 0, 983051, 5, 0, 983052, 5, 0, 983053, 5, 0, 983054, 5, 0, 983055, 5, 0, 983056, 5, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983060, 5, 0, 983061, 5, 0, 983062, 5, 0, 983063, 5, 0, 983064, 5, 0, 1048590, 5, 0, 1048591, 5, 0, 1048592, 5, 0, 1048593, 5, 0, 1048594, 5, 0, 1048595, 5, 0, 1048596, 5, 0, 1048597, 5, 0, 1048598, 5, 0, 1048599, 5, 0, 1048600, 5, 0 )

[node name="FloorDetail" type="TileMap" parent="Room"]
mode = 1
tile_set = ExtResource( 6 )
cell_size = Vector2( 256, 128 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -524277, 5, 0, -524276, 5, 0, -131067, 0, 0, 1, 14, 0, 2, 14, 0, 3, 14, 0, 4, 14, 0, 5, 14, 0, 6, 14, 0, 7, 14, 0, 8, 14, 0, 9, 14, 0, 10, 14, 0, 65537, 14, 0, 65546, 14, 0, 131073, 14, 0, 131078, 4, 0, 131082, 14, 0, 196609, 14, 0, 196611, 5, 0, 196618, 14, 0, 262145, 14, 0, 262149, 0, 0, 262151, 4, 0, 262152, 4, 0, 262154, 14, 0, 262158, 41, 0, 393215, 0, 0, 327681, 14, 0, 327685, 11, 0, 327690, 14, 0, 393217, 14, 0, 393224, 0, 0, 393226, 14, 0, 458753, 14, 0, 458762, 14, 0, 524289, 14, 0, 524296, 5, 0, 524298, 14, 0, 524303, 1, 0, 589825, 14, 0, 589826, 14, 0, 589827, 14, 0, 589828, 14, 0, 589829, 14, 0, 589830, 14, 0, 589831, 14, 0, 589832, 14, 0, 589833, 14, 0, 589834, 14, 0 )

[node name="ObjectsBehindWalls" type="TileMap" parent="Room"]
mode = 1
tile_set = ExtResource( 4 )
cell_size = Vector2( 256, 128 )
format = 1
tile_data = PoolIntArray( -393202, 0, 0, -196594, 20, 0, 786456, 38, 0, 851992, 38, 0, 983064, 38, 0 )

[node name="RoomDetailsBehindWalls" type="TileMap" parent="Room"]
mode = 1
tile_set = ExtResource( 7 )
cell_size = Vector2( 256, 128 )
format = 1
tile_data = PoolIntArray( 131078, 19, 0, 917528, 19, 0, 983064, 19, 0, 1048600, 19, 0 )

[node name="Clients" type="Node2D" parent="Room"]

[node name="Player" parent="Room" instance=ExtResource( 2 )]
position = Vector2( 640, 360 )
input_pickable = true
collision_layer = 1
collision_mask = 1

[node name="Walls" type="TileMap" parent="Room"]
mode = 1
tile_set = ExtResource( 3 )
cell_size = Vector2( 256, 128 )
format = 1
tile_data = PoolIntArray( -720902, 38, 0, -720901, 110, 0, -720900, 110, 0, -720899, 110, 0, -720898, 110, 0, -720897, 110, 0, -786432, 110, 0, -786431, 110, 0, -786430, 110, 0, -786429, 110, 0, -786428, 110, 0, -786427, 110, 0, -786426, 110, 0, -786425, 110, 0, -786424, 110, 0, -786423, 110, 0, -786422, 110, 0, -786421, 110, 0, -786420, 110, 0, -786419, 110, 0, -786418, 110, 0, -786417, 110, 0, -786416, 110, 0, -786415, 110, 0, -786414, 110, 0, -786413, 110, 0, -786412, 110, 0, -786411, 110, 0, -786410, 110, 0, -786409, 110, 0, -786408, 39, 0, -655366, 108, 0, -720872, 111, 0, -589830, 108, 0, -655336, 111, 0, -524294, 108, 0, -589800, 111, 0, -458758, 108, 0, -524264, 111, 0, -393222, 108, 0, -458728, 111, 0, -327686, 108, 0, -393192, 111, 0, -262150, 108, 0, -327656, 111, 0, -196614, 108, 0, -262120, 111, 0, -131078, 108, 0, -196584, 111, 0, -65542, 108, 0, -131048, 111, 0, -6, 108, 0, -65512, 111, 0, 65530, 108, 0, 24, 111, 0, 131066, 108, 0, 65560, 111, 0, 196602, 108, 0, 131096, 111, 0, 262138, 108, 0, 196632, 111, 0, 327674, 108, 0, 262168, 111, 0, 393210, 108, 0, 327704, 111, 0, 458746, 108, 0, 393240, 111, 0, 524282, 108, 0, 458776, 111, 0, 589818, 108, 0, 524312, 111, 0, 655354, 108, 0, 589848, 111, 0, 720890, 108, 0, 655384, 111, 0, 786426, 108, 0, 720920, 111, 0, 851962, 108, 0, 786456, 111, 0, 917498, 108, 0, 851992, 111, 0, 983034, 108, 0, 917528, 111, 0, 1048570, 36, 0, 1048571, 109, 0, 1048572, 109, 0, 1048573, 109, 0, 1048574, 109, 0, 1048575, 109, 0, 983040, 109, 0, 983041, 109, 0, 983042, 109, 0, 983043, 109, 0, 983044, 109, 0, 983045, 109, 0, 983046, 109, 0, 983047, 109, 0, 983048, 109, 0, 983049, 109, 0, 983050, 109, 0, 983051, 109, 0, 983052, 109, 0, 983053, 109, 0, 983064, 111, 0, 1048590, 36, 0, 1048591, 109, 0, 1048592, 109, 0, 1048593, 109, 0, 1048594, 109, 0, 1048595, 109, 0, 1048596, 109, 0, 1048597, 109, 0, 1048598, 109, 0, 1048599, 109, 0, 1048600, 37, 0 )

[node name="ObjectsInFrontOfWalls" type="TileMap" parent="Room"]
mode = 1
tile_set = ExtResource( 4 )
cell_size = Vector2( 256, 128 )
format = 1

[node name="RoomDetailsInForntOfWalls" type="TileMap" parent="Room"]
mode = 1
tile_set = ExtResource( 7 )
cell_size = Vector2( 256, 128 )
format = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="Chat" type="Control" parent="UI"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatWindow" type="Panel" parent="UI/Chat"]
margin_left = 20.0
margin_top = 740.0
margin_right = 360.0
margin_bottom = 1420.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="UI/Chat/ChatWindow"]
margin_right = 170.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Chat"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Chat/ChatWindow"]
margin_left = 10.0
margin_top = 35.0
margin_right = 330.0
margin_bottom = 635.0
rect_min_size = Vector2( 320, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="UI/Chat/ChatWindow/ScrollContainer"]
margin_right = 320.0
margin_bottom = 600.0
rect_min_size = Vector2( 320, 600 )

[node name="LineEdit" type="LineEdit" parent="UI/Chat/ChatWindow"]
margin_left = 15.0
margin_top = 640.0
margin_right = 260.0
margin_bottom = 664.0

[node name="Button" type="Button" parent="UI/Chat/ChatWindow"]
margin_left = 280.0
margin_top = 640.0
margin_right = 327.0
margin_bottom = 664.0
text = "Send"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Chat"]
anims/ChatWindow = SubResource( 2 )
anims/newMail = SubResource( 3 )

[node name="ChatOpen" type="TextureButton" parent="UI/Chat"]
margin_left = 20.0
margin_top = 640.0
margin_right = 148.0
margin_bottom = 768.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="UI/Chat/ChatOpen"]
modulate = Color( 1, 0, 0, 0 )
position = Vector2( 128, 19 )
texture = ExtResource( 11 )

[node name="Menu" type="Panel" parent="UI"]
visible = false
margin_right = 1280.0
margin_bottom = 724.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI/Menu"]
margin_left = 540.0
margin_top = 520.0
margin_right = 607.0
margin_bottom = 540.0
rect_scale = Vector2( 3, 3 )
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="UI/Menu"]
margin_left = 480.0
margin_top = 120.0
margin_right = 640.0
margin_bottom = 144.0
rect_scale = Vector2( 2, 2 )
max_length = 20
placeholder_text = "username"

[node name="Label" type="Label" parent="UI/Menu"]
margin_left = 560.0
margin_top = 60.0
margin_right = 644.0
margin_bottom = 74.0
rect_scale = Vector2( 2, 2 )
text = "Enter a name"

[node name="Error" type="Label" parent="UI/Menu"]
margin_left = 320.0
margin_top = 420.0
margin_right = 640.0
margin_bottom = 434.0
rect_scale = Vector2( 2, 2 )
text = "ERROR LABEL"
align = 1

[node name="ColorPicker" type="Control" parent="UI/Menu"]
margin_left = 380.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 360.0
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="UI/Menu/ColorPicker"]
margin_left = 160.0
margin_right = 361.0
margin_bottom = 40.0

[node name="RSlider" type="HSlider" parent="UI/Menu/ColorPicker"]
margin_left = 180.0
margin_top = 60.0
margin_right = 300.0
margin_bottom = 76.0
rect_scale = Vector2( 2, 2 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="GSlider" type="HSlider" parent="UI/Menu/ColorPicker"]
anchor_right = 0.015
anchor_bottom = 0.125
margin_left = 180.0
margin_top = 100.0
margin_right = 292.2
margin_bottom = 96.0
rect_scale = Vector2( 2, 2 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="BSlider" type="HSlider" parent="UI/Menu/ColorPicker"]
margin_left = 180.0
margin_top = 140.0
margin_right = 300.0
margin_bottom = 156.0
rect_scale = Vector2( 2, 2 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label3" type="Label" parent="UI/Menu/ColorPicker"]
margin_left = 80.0
margin_top = 60.0
margin_right = 120.0
margin_bottom = 74.0
rect_scale = Vector2( 2, 2 )
text = "Red"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="UI/Menu/ColorPicker"]
margin_left = 80.0
margin_top = 140.0
margin_right = 120.0
margin_bottom = 154.0
rect_scale = Vector2( 2, 2 )
text = "Blue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="UI/Menu/ColorPicker"]
margin_left = 80.0
margin_top = 100.0
margin_right = 120.0
margin_bottom = 114.0
rect_scale = Vector2( 2, 2 )
text = "Green"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UI/Chat/ChatWindow/Button" to="UI/Chat" method="_on_Button_pressed"]
[connection signal="pressed" from="UI/Chat/ChatOpen" to="UI/Chat" method="_on_ChatOpen_pressed"]
[connection signal="pressed" from="UI/Menu/Button" to="." method="_on_Button_pressed"]
[connection signal="value_changed" from="UI/Menu/ColorPicker/RSlider" to="UI/Menu/ColorPicker" method="_on_RSlider_value_changed"]
[connection signal="value_changed" from="UI/Menu/ColorPicker/GSlider" to="UI/Menu/ColorPicker" method="_on_GSlider_value_changed"]
[connection signal="value_changed" from="UI/Menu/ColorPicker/BSlider" to="UI/Menu/ColorPicker" method="_on_BSlider_value_changed"]
